@@ -1,3 +1,7 @@
+2013-01-09  Mike Stump  <mikestump@comcast.net>
+
+	* dse.c (record_store): Remove unnecessary assert.
+
 2013-01-09  Jan Hubicka  <jh@suse.cz>
 
 	PR tree-optimization/55569
